# GeometricPredicates

./: .gitignore  CMakeLists.txt  README.md  demo.cpp
Testing/: CMakeLists.txt  TestInCircle.cpp  TestInSphere.cpp  TestIncircle.cpp  TestOrient2d.cpp  TestOrient3d.cpp  TestRobustness.cpp  pointsGen.h  testing.h
include/: predicates.h
